# Discord-Bot

./: .gitignore  .replit  adventbot.py  bot.py  cpediscord.py  last_update  main.py  package-lock.json  pyproject.toml  shitbot.py
cogs/: admin.py  advent.py  music.py  rpg.py  shitbot.py
cogs/utils/: __init__.py  cpediscord.py  errors.py  links.py  songqueue.py  users.py  ytdl_source.py
pastas/: 164579809567965186  203211179613487106  215188148882243584  236516328310046721  256993314174271489  310479313814159364  883135611907735582
update/: data.json  last_update
